# agent-vdesktop

./: .gitignore  .mcp.json  AGENTS.md  PR_TEST.md  README.md  SECURITY.md  description.md  pyproject.toml  vdesktop.spec
.claude/: settings.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: dispatch.yml  release.yml  test.yml
.serena/: project.yml
.seretos/: projects.yml
docs/: eval-vscode-diff-mode.md
scripts/: build.ps1
src/vdesktop_plugin/: __init__.py  __main__.py  _win32_helpers.py  _window_classes.py  adoption.py  desktops.py  layouts.py  monitors.py  pathmap.py  query.py  server.py  tracking.py  windows.py
src/vdesktop_plugin/launchers/: __init__.py  _common.py  chrome.py  edge.py  firefox.py  generic.py  terminal.py  vscode.py
src/vdesktop_plugin/tools/: __init__.py  _engine.py  adoption.py  desktops.py  layouts.py  query.py  windows.py
src/vdesktop_plugin/tools/launchers/: __init__.py  chrome.py  edge.py  generic.py  terminal.py  vscode.py
tests/: conftest.py  test_adoption_classify.py  test_find_chrome_tab.py  test_firefox_args.py  test_launch_app_cwd.py  test_layouts.py  test_list_windows_shapes.py  test_pathmap.py  test_registration.py  test_relabel_window.py  test_terminal_args.py  test_tracking.py
