[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdesktop-plugin"
version = "0.1.0"
description = "Claude Code plugin: MCP server for Microsoft Virtual Desktops on Windows 11"
requires-python = ">=3.11"
authors = [{ name = "Arne von Appen" }]
dependencies = [
  "mcp>=1.2",
  # The vdesktop automation engine. Pinned to an EXACT tag for deterministic
  # builds — bumps land via the dependency-update ticket that
  # lib-python-vdesktop's release pipeline files here (see AGENTS.md). pyvda /
  # pywin32 / comtypes / uiautomation come transitively from the lib; they are
  # deliberately not re-declared so the plugin only ever talks to Windows
  # through the lib's VDesktopManager surface.
  "lib-python-vdesktop @ git+https://github.com/Seretos/lib-python-vdesktop@v0.1.2",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]
test = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
